reworked dialogs to use a better modal

--- a/apps/AdminComposite/Content/admin-styles.css
+++ b/apps/AdminComposite/Content/admin-styles.css
@@ -65,3 +65,8 @@ table .actions .admin-delete { background:url('chromatron/img/icons/list-style/i
 	line-height:100%;
 }
 
+.forum-container {
+	overflow: scroll;
+	width: 750px;
+	height: 800px
+}
