--- a/apps/AdminComposite/Views/Dashboard/GetConfirmationMessage.cshtml
+++ b/apps/AdminComposite/Views/Dashboard/GetConfirmationMessage.cshtml
@@ -2,7 +2,7 @@
 
 <div id="confirm" class="notification attention" style="height:300px">
 	<p>
-		<strong>Attention notification</strong> 
+		<strong>Confirmation</strong> 
 	
 		@Model
 	</p>
