--- a/apps/AdminComposite/Views/Organization/Index.cshtml
+++ b/apps/AdminComposite/Views/Organization/Index.cshtml
@@ -5,11 +5,12 @@
 		$("#add-user").click(function () {
 			$("<div></div>")
 				.load("/Organization/GetUser")
-				.dialog({
-					modal: true,
-					title: "Add User",
-					width: 650,
-					height: 800
+				.modal({
+					autoResize: true,
+					autoPosition: true,
+					position: new Array(25, 300),
+					dataCss: { backgroundColor: "#fff", overflow: "auto",  height: 385, width: 635 },
+					containerCss: { height: 400, width: 650 }
 				});
 
 			return false;
@@ -26,16 +27,18 @@
 			});
 		});
 
-		$(".edit").click(function () {
+		$(".edit.user").click(function () {
 			var organizationId = "11111111-1111-1111-1111-111111111111";
 			$("<div></div>")
 				.load("/Organization/GetUser?organizationId=" + organizationId + "&userId=" + $(this).attr("data-user-id"))
-				.dialog({
-					modal: true,
-					title: $(this).attr("data-user-name"),
-					width: 650,
-					height: 800
+				.modal({
+					autoResize: true,
+					autoPosition: true,
+					position: new Array(25, 300),
+					dataCss: { backgroundColor: "#fff", overflow: "auto", height: 385, width: 635 },
+					containerCss: { height: 400, width: 650 }
 				});
+
 		});
 	});
 
@@ -122,7 +125,7 @@ section
 				<td>Moments ago</td>
 				<td>
 					<ul class="actions">
-						<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-user-name="Theodore Donald &quot;Donny&quot; Kerabtsos" data-user-id="22222222-2222-2222-2222-222222222222">Edit</a></li>
+						<li><a class="edit user" rel="tooltip" href="#" original-title="Edit" data-user-name="Theodore Donald &quot;Donny&quot; Kerabtsos" data-user-id="22222222-2222-2222-2222-222222222222">Edit</a></li>
 					</ul>
 				</td>
 			</tr>
@@ -132,7 +135,7 @@ section
 				<td>Moments ago</td>
 				<td>
 					<ul class="actions">
-						<li><a class="edit" rel="tooltip" href="#" original-title="Edit" data-user-name="Walter Sobchak" data-user-id="33333333-3333-3333-3333-333333333333">Edit</a></li>
+						<li><a class="edit user" rel="tooltip" href="#" original-title="Edit" data-user-name="Walter Sobchak" data-user-id="33333333-3333-3333-3333-333333333333">Edit</a></li>
 						<li><a class="admin-delete" href="#" rel="tooltip" original-title="Delete Walter Sobchak" data-confirmation-message="Really delete Walter Sobchak?" data-confirm-function="deleteUser" data-item-id="33333333-3333-3333-3333-333333333333">Delete</a></li>
 					</ul>
 				</td>
