--- a/apps/AdminComposite/Views/Shared/_ForumDetails.cshtml
+++ b/apps/AdminComposite/Views/Shared/_ForumDetails.cshtml
@@ -20,7 +20,7 @@
 <div class="input-container">
 	<label>Host</label>
 	<br />
-	<input type="text" id="forum-host" value="socialrally.com"/>
+	<input type="text" id="forum-host" value="socialrally.com" readonly="readonly"/>
 	<p>Forum url: <b><span id="forum-url">http//socialrally.com/{organization-name}/forums/{forum-name}</span></b></p>
 </div>
 
@@ -30,6 +30,7 @@
 	<textarea rows="10" cols="65"></textarea>
 </div>
 
+<!--
 <div class="input-container">
 	<fieldset>
 		<legend>Voting</legend>
@@ -75,6 +76,5 @@
 		</span>
 		<img id="theme-preview" alt="theme-preview" src="#" style="display:none"/>
 	</div>
-
-					
 </div>
+-->
