--- a/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
+++ b/apps/AdminComposite/Views/Shared/LeftRail/SitewideNavigation.cshtml
@@ -26,6 +26,10 @@
 		<a href="@Url.Action("Index", "Organization")" title="Home" class="dashboard no-submenu">Organization</a>
 	</li>
 
+	 <li>
+		<a href="#" class="new-forum-button new-forum">Add Forum</a>
+	 </li>
+
 	@for (int i = 1; i <= 3; i++)
 	{
 		var forumId = Guid.Parse("11111111-1111-1111-1111-11111111111" + i);
@@ -39,6 +43,8 @@
 				<li @if (forumId.ToString() == selectedForumId && controller == "Category" && action=="List") {<text>class="current"</text>}><a href="@Url.Action("List", "Category", new { forumId })">Categories</a></li>
 				<li @if (forumId.ToString() == selectedForumId && controller == "User" && action=="List") {<text>class="current"</text>}><a href="@Url.Action("List", "User", new { forumId })">Users</a></li>
 				<li @if (forumId.ToString() == selectedForumId && controller == "Badge" && action == "List"){<text>class="current"</text>}><a href="@Url.Action("List", "Badge", new { forumId })">Badges</a></li>
+				<li @if (forumId.ToString() == selectedForumId && controller == "Voting" && action == "List"){<text>class="current"</text>}><a href="@Url.Action("List", "VotingScheme", new { forumId })">Voting</a></li>
+				<li @if (forumId.ToString() == selectedForumId && controller == "Theme" && action == "List"){<text>class="current"</text>}><a href="@Url.Action("List", "Theme", new {forumId})">Themes</a></li>
 				<li @if (forumId.ToString() == selectedForumId && controller == "Moderation" && (action == "Posts" || action == "Comments")){<text>class="current"</text>}><a href="@Url.Action("Posts", "Moderation", new { forumId })">Moderate Posts & Comments</a></li>
 				<li @if (forumId.ToString() == selectedForumId && controller == "Forum" && action == "AuthenticationProviders"){<text>class="current"</text>}><a href="@Url.Action("AuthenticationProviders", "Forum", new { forumId })">Configure Authentication</a></li>
 			</ul>
