--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
 	<link href="@Url.Content("~/Content/chromatron/css/jquery.visualize.css")" rel="stylesheet" type="text/css"/>
 	<link href="@Url.Content("~/Content/chromatron/css/jquery.wysiwyg.css")" rel="stylesheet" type="text/css"/>
 	<link href="@Url.Content("~/Content/admin-styles.css")" rel="stylesheet" type="text/css"/>
-	<link href="@Url.Content("~/Content/jquery.simplemodal.1.4.1.css")" rel="stylesheet" type="text/css"/>
+	<link href="@Url.Content("~/Content/simplemodal/jquery.simplemodal.1.4.1.css")" rel="stylesheet" type="text/css"/>
 	<link href='http://fonts.googleapis.com/css?family=PT+Sans:regular,italic,bold,bolditalic' rel='stylesheet' type='text/css'> 
 	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.1/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" >
 	
@@ -41,10 +41,10 @@
 	<script src="@Url.Content("~/Content/chromatron/js/libs/selectivizr.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/chromatron/js/script.js")" type="text/javascript"> </script>
 	<script src="@Url.Content("~/Content/admin-ui.js")" type="text/javascript"></script>
-	<script src="@Url.Content("~/Content/jquery.simplemodal.1.4.1.min.js")" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/simplemodal/jquery.simplemodal.1.4.1.min.js")" type="text/javascript"></script>
 	<script src="@Url.Content("~/Content/jquery.url-encode.js")" type="text/javascript"></script>
-	<script src="http://www.appelsiini.net/projects/jeditable/jquery.jeditable.js" type="text/javascript"></script>
-	<script src="http://www.appelsiini.net/projects/viewport/jquery.viewport.js" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content/jeditable/jquery.jeditable.js")" type="text/javascript"></script>
+	<script src="@Url.Content("~/Content//viewport/jquery.viewport.js")" type="text/javascript"></script>
 </head>
 <body>
 	<div>
