--- a/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
+++ b/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
@@ -48,10 +48,14 @@
 				</tr>
 			</tbody>
 		</table>
-		<p>Warning: if you disable an authentication provider that users have already used
-			to register with, those users will no longer have access to the forum. </p>
-		<p>
+
+		<div class="notification attention">
+			<p>
+				<strong>Warning</strong> 
+				if you disable an authentication provider that users have already usedto register with, those users will no longer have access to the forum.
+			<p>
+		</div>
+		
 			<input type="button" class="button" value="Save" style="float: right" />
-		</p>
 	</section>
 </article>
