--- a/apps/AdminComposite/Views/Shared/_MyForums.cshtml
+++ b/apps/AdminComposite/Views/Shared/_MyForums.cshtml
@@ -51,5 +51,5 @@
 		</tbody>
 	</table>
 
-	<a href="#" class="new-forum-button" style="float:right">Add Forum</a>
+	<a href="#" class="button new-forum-button" style="float:right">Add Forum</a>
 </section>
