--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -25,5 +25,7 @@
 			<img id="theme-preview" alt="theme-preview" src="#" style="display:none"/>
 		</div>
 	</section>
+
+	<a href="#" style="float:right" class="button" id="save-theme">Save</a>
 </article>
 
