--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -23,6 +23,7 @@
 	<header>
 		<h2>Manage Forum Badges</h2>
 	</header>
+
 	<p>Setting a forum to active means it will be awarded to users when the trigger threshold is satisfied.</p>
 	<table>
 		<thead>
@@ -103,7 +104,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<a href="#" style="float:right" id="create-badge">Add Badge</a>
+	<a href="#" style="float:right" class="button" id="create-badge">Add Badge</a>
 </article>
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
