--- a/apps/AdminComposite/Views/Dashboard/Index.cshtml
+++ b/apps/AdminComposite/Views/Dashboard/Index.cshtml
@@ -11,7 +11,7 @@
 <section>
 	<fieldset>
 		<legend>User Activity</legend>
-
+		<br/>
 		<table class="data" data-chart="line">
 			<thead>
 				<tr>
@@ -66,32 +66,8 @@
 	</fieldset>
 </section>
 
-<section>
-	<fieldset>
-		<legend>Today's Stats</legend>
+@section Breadcrumbs {
+	<ul id="breadcrumbs">
 
-		<div class="widget text-only" id="text-widget">
-			<p><strong>Forum Count</strong> +29 Lorem Ipsum</p>
-		</div>
-
-		<div class="widget text-only" id="text-widget">
-			<p><strong>User Count</strong> +29 Lorem Ipsum</p>
-		</div>
-
-		<div class="widget text-only" id="text-widget">
-			<p><strong>Post Count</strong> +29 Lorem Ipsum</p>
-		</div>
-
-		<div class="widget text-only" id="text-widget">
-			<p><strong>Reply Count</strong> +29 Lorem Ipsum</p>
-		</div>
-
-		<div class="widget text-only" id="text-widget">
-			<p><strong>Vote Count</strong> +29 Lorem Ipsum</p>
-		</div>
-		<div style="float:right;text-align:left" class="note-container">
-			<p class="note">Data reflect the last 24 horus of activity across the organization</p>
-		</div>
-	</fieldset>
-</section>
-
+	</ul>
+}
