--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -69,6 +69,7 @@
 		</section>
 
 		<section role="main">
+			@RenderPage("Header/InfoWidgets.cshtml")
 			@RenderSection("Breadcrumbs", required: false)
 			
 			@RenderBody()
