--- a/apps/AdminComposite/Content/chromatron/css/style.css
+++ b/apps/AdminComposite/Content/chromatron/css/style.css
@@ -1070,8 +1070,7 @@ textarea { overflow:auto; }
 fieldset {
 	-moz-border-radius:3px;
 	border-radius:3px;
-	padding: 0px 25px 10px 25px;
-	margin-bottom:10px;
+	padding: 25px 25px 0;
 	border:1px solid;
 }
 legend {
